File: components/nexus-siesta/src/main/java/org/sonatype/nexus/siesta/internal/AuthorizationExceptionMapper.java